--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,12 +1,12 @@
 # Adds namespace to all resources.
-namespace: crds-system
+namespace: concourse-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: crds-
+namePrefix: concourse-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
@@ -68,3 +68,9 @@ vars:
 #    kind: Service
 #    version: v1
 #    name: webhook-service
+
+secretGenerator:
+  - name: concourse-auth
+    literals:
+      - username=test
+      - password=test
